add objectives and delivery route

--- a/index.html
+++ b/index.html
@@ -12,12 +12,43 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Produtos</a></li>
-          <li><a href="#">Entrega</a></li>
+          <li><a href="delivery.html">Entrega</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h2>TO DO</h2>
+      <h2>Objetivos</h2>
+      <ul>
+        <li>
+          Estrutura básica em HTML sobre produtos e suas respectivas categorias.
+        </li>
+        <li>Nesta fase não será necessário o uso de CSS ou frameworks</li>
+        <li>Não deve haver JavaScript</li>
+      </ul>
+      <h2>Metas</h2>
+      <ol>
+        <li>
+          <input type="checkbox" checked disabled>Definição de objetivos e metas;</input>
+        </li>
+        <li>
+          <input type="checkbox" checked disabled>Criação de dados fictícios para serem utilizados;</input>
+        </li>
+        <li>
+          <input type="checkbox" checked disabled>Fazer esqueleto inicial do HTML com seus metadados (DOCTYPE e head);</input>
+        </li>
+        <li>
+          <input type="checkbox" checked disabled>Elemento de navegação entre a página inicial, página dos produtos e página de entrega;</input>
+        </li>
+        <li>
+          <input type="checkbox" checked disabled>Listagem dos produtos em suas categorias;</input>
+        </li>
+        <li>
+          <input type="checkbox" checked disabled>Listagem dos tipos modalidades de entrega;</input>
+        </li>
+        <li>
+          <input type="checkbox" checked disabled>Tela inicial com objetivos e metas.</input>
+        </li>
+      </ol>
     </main>
     <footer>
       <p>&copy; 2025 Minimercado</p>
@@ -28,7 +59,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Produtos</a></li>
-          <li><a href="#">Entrega</a></li>
+          <li><a href="delivery.html">Entrega</a></li>
         </ul>
       </nav>
     </footer>
