--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Produtos</a></li>
-          <li><a href="#">Entrega</a></li>
+          <li><a href="delivery.html">Entrega</a></li>
         </ul>
       </nav>
     </header>
@@ -99,7 +99,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Produtos</a></li>
-          <li><a href="#">Entrega</a></li>
+          <li><a href="delivery.html">Entrega</a></li>
         </ul>
       </nav>
     </footer>
